--- a/Front-end-demo/css/style.css
+++ b/Front-end-demo/css/style.css
@@ -49,6 +49,12 @@ html {
     flex-direction: column;
 }
 
+.form-button {
+    display: flex;
+    margin-bottom: 16px;
+    flex-direction: row;
+}
+
 .form-label,
 .form-message {
     text-align: left;
@@ -104,6 +110,24 @@ html {
 
 .form-submit:hover {
     background-color: #1ac7b6;
+}
+
+.form-cancel {
+    outline: none;
+    background-color: #565e5d;
+    margin-top: 12px;
+    padding: 12px 16px;
+    font-weight: 600;
+    color: #fff;
+    border: none;
+    width: 100%;
+    font-size: 14px;
+    border-radius: 8px;
+    cursor: pointer;
+}
+
+.form-cancel:hover {
+    background-color: #a3a8a8;
 }
 
 .spacer {
